[package]
name = "zip_structs"
version = "0.2.0-beta"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2018"
license = "MIT"
description = "ZIP archives structures handling library"
repository = "https://github.com/tats-u/rust-zip-structs/"
readme = "README.md"
categories = ["parsing", "filesystem"]
keywords = ["zip", "archive"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.25"
bytesize = "1.0.1"
regex = "1"

[dev-dependencies]
anyhow = "1.0.41"
vfs = "0.5.1"
rusty-hook = "0.11.2"
