[package]
name = "zip_structs"
version = "0.2.1"
authors = ["Tatsunori Uchino <tats.u@live.jp>"]
edition = "2018"
license = "MIT"
description = "ZIP archives structures handling library"
repository = "https://github.com/tats-u/rust-zip-structs/"
readme = "README.md"
categories = ["parsing", "filesystem"]
keywords = ["zip", "archive"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
thiserror = "1.0.37"
bytesize = "1.1.0"

[dev-dependencies]
anyhow = "1.0.66"
vfs = "0.5.2"
rusty-hook = "0.11.2"
